--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     --font-texto: "IBM Plex Mono", monospace;
     --color-primario: #5300C8;
     --color-secundario: #03318C;
-    --color-card: #5D04D9;
+    --color-card: #73F0BA;
 }
 
 /* Estilos globales */
